--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment-2</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -194,5 +195,27 @@
             </div>
            </section>
     </main>
+    <footer>
+        <hr>
+        <div class="footer">
+            <hr> <br>
+            <h3><i class="fa-solid fa-car"></i> Travelling <span>Home</span></h3>
+            <br>
+            <hr>
+            <br>
+            <p>Traveling means going from one place to another for different purposes. They also explore to see the unseen and know the unknown.  <br> Leo erat maecenas vitae elementum ultricies nullam. </p>
+            <br><br>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-github"></i>
+            <br><br><br><br>
+        </div>
+        <hr>
+        <div class="lasting">
+            
+            <strong>2024, All Rights Reserved.</strong>
+            <strong class="right"><i class="fa-solid fa-phone-volume"></i> 01749785237</strong>
+        </div>
 </body>
 </html>
